<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_products">

    <fragment
        android:id="@+id/navigation_categories"
        android:name="com.example.myproductsapp.ui.categories.CategoryListFragment"
        android:label="@string/title_categories"
        tools:layout="@layout/fragment_category_list">
        <action
            android:id="@+id/action_navigation_categories_to_navigation_products"
            app:destination="@id/navigation_products" />
    </fragment>

    <fragment
        android:id="@+id/navigation_products"
        android:name="com.example.myproductsapp.ui.products.ProductListFragment"
        android:label="@string/title_products"
        tools:layout="@layout/fragment_product_list" />

    <fragment
        android:id="@+id/navigation_cart"
        android:name="com.example.myproductsapp.ui.cart.CartFragment"
        android:label="@string/title_cart"
        tools:layout="@layout/fragment_notifications" />
</navigation>